tests/purs/failing/3891.purs
-- @shouldFailWith TypesDoNotUnify
module Main where

oops = "(" ")"
