tests/purs/failing/3891.out
Error found:
in module [33mMain[0m
at tests/purs/failing/3891.purs:4:8 - 4:15 (line 4, column 8 - line 4, column 15)

  Could not match type
  [33m        [0m
  [33m  String[0m
  [33m        [0m
  with type
  [33m              [0m
  [33m  String -> t0[0m
  [33m              [0m

while applying a function [33m"("[0m
  of type [33mString[0m
  to argument [33m")"[0m
while inferring the type of [33m"(" ")"[0m
in value declaration [33moops[0m

where [33mt0[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/TypesDoNotUnify.md for more information,
or to contribute content related to this error.

